--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -17,6 +17,7 @@
     <body>
         {{{body}}}
     </body>
+    <script type="text/javascript" src="javascripts/scroll-animation.js"></script>
     <script type="text/javascript" src="javascripts/orbit-controls.js"></script>
     <script type="text/javascript" src="javascripts/index.js"></script>
 </html>
