--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,6 +6,37 @@ body css
   width: 90%;
   margin: 0 auto; }
 
+.alert {
+  background: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  height: 0px;
+  width: 50%;
+  transition: height 400ms cubic-bezier(0.25, 0.39, 0.39, 2.01);
+  height: 15px;
+  line-height: 15px;
+  z-index: 20;
+  margin-top: 52px;
+  padding: 10px;
+  text-align: center;
+  color: #f3f3f3;
+  font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+  font-size: 14px;
+  display: none; }
+  .alert.is-open {
+    display: block; }
+
+.success {
+  background: #5aca5a; }
+
+.warning {
+  background: #c9c631; }
+
+.danger {
+  background: #c43434; }
+
+/********************************************
+scroll animation css
+*********************************************/
 /********************************************
 loader pulser css
 *********************************************/
@@ -91,7 +122,7 @@ main orientation css
   background-color: #f3f3f3;
   z-index: 2;
   transition: all 600ms ease-in-out;
-  overflow: scroll; }
+  overflow-y: scroll; }
 
 .slide.is-transitioned .belt {
   transform: translateX(-50%);
@@ -347,7 +378,7 @@ about css
   margin: 0 auto; }
 
 section {
-  padding: 70px 0; }
+  padding: 100px 0; }
   section h1 {
     color: #181818;
     font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
@@ -373,7 +404,8 @@ profile card css
   .card .profile-container {
     float: right;
     min-width: 250px;
-    width: 50%; }
+    width: 50%;
+    min-height: 450px; }
     .card .profile-container h1 {
       color: #181818;
       font-family: 'Fredoka One', 'Arial Rounded MT Bold', 'Segoe UI';
@@ -391,7 +423,7 @@ profile card css
       outline: 0;
       display: inline-block;
       padding: 8px;
-      margin: 5px auto 2.5%;
+      margin: 0 auto;
       color: white;
       background-color: lightblue;
       text-align: center;
