Fix error handler and submit button for message form.

--- a/views/portfolio/main.hbs
+++ b/views/portfolio/main.hbs
@@ -99,7 +99,7 @@
                                                 <div class="description">Write your message.</div>
                                                 <div class="text-center">
                                                 <textarea id="message" placeholder="Message" rows="5" name="message" autocapitalize="autocapitalize" spellcheck="spellcheck"></textarea>
-                                                <button type="submit"><div class="button">Send Message</div></button>
+                                                <div id="message-submit" class="button">Send Message</div>
                                                 </div>
                                             </div>
                                             <div class="modal-body modal-body-step-3">
