--- a/compile/style.scss
+++ b/compile/style.scss
@@ -520,13 +520,18 @@ profile card css
         float: right;
         min-width: 250px;
         width: 50%;
-        min-height: 450px;
+        min-height: 410px;
         //height: 100%;
+        position: relative;
         .profile-top {
             //min-height: 80%;
         }
         .profile-bottom {
             //min-height: 20%;
+            position: absolute;
+            //transform: translate(0, 100%);
+            bottom: 0;
+            width: 100%;
         }
         h1 {
             color: rgb(24, 24, 24);
@@ -548,12 +553,12 @@ profile card css
             outline: 0;
             display: inline-block;
             padding: 8px;
-            margin: 0 auto;
+            margin: 0 auto 0;
             color: white;
             background-color: lightblue;
             text-align: center;
             cursor: pointer;
-            width: 95%;
+            width: 98%;
             font-size: 18px;
             font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
             transition: transform 100ms cubic-bezier(0, 1.69, 0.76, 1.74);
@@ -581,7 +586,7 @@ profile card css
         display: table;
         clear: both;
     }
-    @media (max-width: 575px) {
+    @media (max-width: 595px) {
         .profile-container {
             width: 100%;
         }
@@ -961,6 +966,7 @@ contact form css
             text-align: center;
             cursor: pointer;
             width: 95%;
+            max-width: 375px;
             font-size: 18px;
         height: 25px;
         line-height: 25px;
