--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -405,7 +405,12 @@ profile card css
     float: right;
     min-width: 250px;
     width: 50%;
-    min-height: 450px; }
+    min-height: 410px;
+    position: relative; }
+    .card .profile-container .profile-bottom {
+      position: absolute;
+      bottom: 0;
+      width: 100%; }
     .card .profile-container h1 {
       color: #181818;
       font-family: 'Fredoka One', 'Arial Rounded MT Bold', 'Segoe UI';
@@ -423,12 +428,12 @@ profile card css
       outline: 0;
       display: inline-block;
       padding: 8px;
-      margin: 0 auto;
+      margin: 0 auto 0;
       color: white;
       background-color: lightblue;
       text-align: center;
       cursor: pointer;
-      width: 95%;
+      width: 98%;
       font-size: 18px;
       font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
       transition: transform 100ms cubic-bezier(0, 1.69, 0.76, 1.74); }
@@ -449,7 +454,7 @@ profile card css
     content: "";
     display: table;
     clear: both; }
-  @media (max-width: 575px) {
+  @media (max-width: 595px) {
     .card .profile-container {
       width: 100%; } }
 
@@ -750,6 +755,7 @@ contact form css
   text-align: center;
   cursor: pointer;
   width: 95%;
+  max-width: 375px;
   font-size: 18px;
   height: 25px;
   line-height: 25px;
