--- a/views/portfolio/main.hbs
+++ b/views/portfolio/main.hbs
@@ -16,7 +16,7 @@
                     </div>
                     <div class="main-button"> 
                         <p>MORE </p>
-                        <p>&#11015;</p>
+                        <p><i class="fa fa-arrow-down" aria-hidden="true"></i></p>
                     </div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
                             <div class="profile-top">
                                 <h1>Lue Hang</h1>
                                 <p class="title">Full-Stack Web and Software Developer, Fitness Trainer</p>
-                                <p>"Mern Stack" developer and designer.  I am able to write codes for React JS, JavaScript, jQuery, Express JS, Node JS, Mongo DB, MySql, SCSS, SASS, CSS, and HTML5.  On my free time, I love to work out and practice Mauy Thai.</p><a href="mailto:Lue_Hang@hotmail.com"><i class="fa fa-envelope"></i></a><a href="https://github.com/luehang"><i class="fa fa-github"></i></a><a href="https://facebook.com/lue.hang"><i class="fa fa-facebook"></i></a><a href="https://www.linkedin.com/in/lue-hang-8ba684153"><i class="fa fa-linkedin"></i></a>
+                                <p>"Mern Stack" developer and designer.  I am able to write codes for React JS, JavaScript, jQuery, Express JS, Node JS, Mongo DB, MySql, SASS, CSS, and HTML5.  On my free time, I love to work out and practice Mauy Thai.</p><a href="mailto:Lue_Hang@hotmail.com"><i class="fa fa-envelope"></i></a><a href="https://github.com/luehang"><i class="fa fa-github"></i></a><a href="https://facebook.com/lue.hang"><i class="fa fa-facebook"></i></a><a href="https://www.linkedin.com/in/lue-hang-8ba684153"><i class="fa fa-linkedin"></i></a>
                             </div>
                             <div class="profile-bottom">
                                 <a href="#contact"><button>Contact</button></a>
@@ -104,7 +104,7 @@
                                             </div>
                                             <div class="modal-body modal-body-step-3">
                                                 <div class="title">Step 3</div>
-                                                <div class="description">Message sent! Please wait for the success notification. Thank you.</div>
+                                                <div class="description">Message sent! Please wait for the success notification or try again. Thank you.</div>
                                                 <div class="text-center">
                                                 <div class="button">Done!</div>
                                                 </div>
