--- a/src/styles/loader.scss
+++ b/src/styles/loader.scss
@@ -37,11 +37,11 @@ loader pulser css
         margin-top: -50px;
         margin-left: -50px;
         background: rgb(31, 31, 141);
-        animation: pulse 3s linear infinite;
+        animation: pulse 0.8s linear infinite;
         opacity: 0;
     }
     &:after {
-        animation: pulse 2s linear 2.3s infinite;
+        animation: pulse .3s linear 0.6s infinite;
     }
 }   
 @keyframes pulse {
