--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -76,6 +76,9 @@ profile card css
             text-align: center;
             cursor: pointer;
             width: 98%;
+            border-radius: 5px;
+            -webkit-border-radius: 5px;
+            -moz-border-radius: 5px;
             font-size: 18px;
             font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
             transition: transform 100ms cubic-bezier(0, 1.69, 0.76, 1.74);
