--- a/src/styles/loader.scss
+++ b/src/styles/loader.scss
@@ -18,6 +18,8 @@ loader pulser css
     background: #21334e;
     box-shadow: inset 0 0 4em #111c2d, 0 0 6em #2b405f;
     border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
     position: relative;
     margin: 50px;
     display: inline-block;
@@ -27,6 +29,10 @@ loader pulser css
         width: 100px;
         height: 100px;
         border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
     }
 }
 .pulser {
