--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -19,6 +19,8 @@ sorting image css
             margin: 0 auto 7px;
             padding: 8px 0;
             border-radius: 4px;
+            -webkit-border-radius: 4px;
+            -moz-border-radius: 4px;
             cursor: pointer;
             color: rgb(24, 24, 24);
             font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
@@ -179,6 +181,8 @@ browser window image css
         width: 12px;
         background-color: #bbb;
         border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
         display: inline-block;
     }
     /* Style the input field */
@@ -186,6 +190,8 @@ browser window image css
         font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
         width: 100%;
         border-radius: 3px;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
         border: none;
         background-color: white;
         margin-top: -8px;
