Added gulp as task runner and remove webpack.

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -18,9 +18,7 @@
         {{{body}}}
     </body>
     <script type="text/javascript" src="bundle.js"></script>
-    <script type="text/javascript" src="javascripts/scroll-animation.js"></script>
-    <script type="text/javascript" src="javascripts/three-orbit-controls.js"></script>
-    <script type="text/javascript" src="javascripts/index.js"></script>
+    <script type="text/javascript" src="javascripts/index.min.js"></script>
 </html>
 
 
