--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -17,8 +17,10 @@
     <body>
         {{{body}}}
     </body>
-    <script type="text/javascript" src="bundle.js"></script>
-    <script type="text/javascript" src="javascripts/index.min.js"></script>
+    <script type="text/javascript" src="/bundle.js"></script>
+    <script type="text/javascript" src="/javascripts/scroll-animation.js"></script>
+    <script type="text/javascript" src="/javascripts/three-orbit-controls.js"></script>
+    <script type="text/javascript" src="/javascripts/index.js"></script>
 </html>
 
 
