--- a/src/styles/layout/_about.scss
+++ b/src/styles/layout/_about.scss
@@ -10,7 +10,7 @@ section {
     padding: 100px 0;
     h1 {
         color: rgb(24, 24, 24);
-        font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+        font-family: $font-stack-primary;
         text-align: center;
         margin: 0;
     }
@@ -52,16 +52,16 @@ profile card css
         }
         h1 {
             color: rgb(24, 24, 24);
-            font-family: 'Fredoka One', 'Arial Rounded MT Bold', 'Segoe UI';
+            font-family: $font-stack-secondary;
             font-weight: none;
         }
         .title {
-            color: rgb(88, 162, 197);
+            color: $dark-blue;
             font-size: 18px;
             margin-top: 4px;
         }
         p {
-            font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+            font-family: $font-stack-primary;
             margin-left: 10px;
             margin-right: 10px;
         }
@@ -72,7 +72,7 @@ profile card css
             padding: 8px;
             margin: 0 auto 0;
             color: white;
-            background-color: lightblue;
+            background-color: $light-blue;
             text-align: center;
             cursor: pointer;
             width: 98%;
@@ -80,13 +80,13 @@ profile card css
             -webkit-border-radius: 5px;
             -moz-border-radius: 5px;
             font-size: 18px;
-            font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+            font-family: $font-stack-primary;
             transition: transform 100ms cubic-bezier(0, 1.69, 0.76, 1.74);
             &:hover {
                 transform: scale(1.03);
                 -ms-transform: scale(1.03);
                 -webkit-transform: scale(1.03);
-                background-color: rgb(88, 162, 197);
+                background-color: $dark-blue;
                 color: white;
             }
         }
