--- a/src/styles/layout/_contact.scss
+++ b/src/styles/layout/_contact.scss
@@ -1,6 +1,3 @@
-/********************************************
-contact form css
-*********************************************/
 #contact {
     background-color: rgb(51, 53, 59);
     h1 {
@@ -13,7 +10,7 @@ contact form css
         text-align: center;
         margin-bottom: 30px;
         color: rgb(24, 24, 24);
-        font-family: 'Fredoka One', 'Arial Rounded MT Bold', 'Segoe UI';
+        font-family: $font-stack-secondary;
         font-weight: 300;
         font-size: 24px;
         letter-spacing: 1px; 
@@ -22,7 +19,7 @@ contact form css
         text-align: center;
         color: #666;
         margin-bottom: 30px; 
-        font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+        font-family: $font-stack-primary;
     }
     input[type="text"],
     input[type="email"],
@@ -38,9 +35,9 @@ contact form css
         box-sizing: border-box;
         outline: none; 
         font-size: 14px;
-        font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+        font-family: $font-stack-primary;
         &:focus {
-            border-color: lightblue;
+            border-color: $light-blue;
         }
     }
     .button,
@@ -51,7 +48,7 @@ contact form css
             padding: 8px;
             margin: 5px auto 2.5%;
             color: white;
-            background-color: lightblue;
+            background-color: $light-blue;
             text-align: center;
             cursor: pointer;
             width: 95%;
@@ -64,13 +61,13 @@ contact form css
         -moz-border-radius: 5px;
         text-transform: uppercase;
         letter-spacing: 1px;
-        font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+        font-family: $font-stack-primary;
         transition: transform 100ms cubic-bezier(0, 1.69, 0.76, 1.74);
         &:hover {
             transform: scale(1.03);
             -ms-transform: scale(1.03);
             -webkit-transform: scale(1.03);
-            background-color: rgb(88, 162, 197);
+            background-color: $dark-blue;
             color: white;
         }
     }
@@ -92,7 +89,7 @@ contact form css
     .modal-header {
         height: 45px;
         background: white;
-        border-bottom: 1px solid lightblue;
+        border-bottom: 1px solid $light-blue;
         display: flex;
         justify-content: center;
         align-items: center; 
@@ -111,7 +108,7 @@ contact form css
         background: rgba(0, 0, 0, 0.2); 
         &.is-active {
             background: rgba(0, 0, 0, 0.4);
-            background-color: rgb(88, 162, 197);
+            background-color: $dark-blue;
         }
     }
     .modal-bodies {
@@ -156,61 +153,6 @@ contact form css
     .animate-up {
         transform: translate(-1300px, -600px) rotate(-50deg); 
     }
-    @keyframes out {
-        0% {
-            transform: translateY(0px) rotate(0deg); 
-        }
-        60% {
-            transform: rotate(60deg); 
-        }
-        100% {
-            transform: translateY(800px) rotate(10deg); 
-        } 
-    }
-    @-moz-keyframes out {
-        0% {
-            transform: translateY(0px) rotate(0deg); 
-        }
-        60% {
-            transform: rotate(60deg); 
-        }
-        100% {
-            transform: translateY(800px) rotate(10deg); 
-        } 
-    }
-    @-webkit-keyframes out {
-        0% {
-            transform: translateY(0px) rotate(0deg); 
-        }
-        60% {
-            transform: rotate(60deg); 
-        }
-        100% {
-            transform: translateY(800px) rotate(10deg); 
-        } 
-    }
-    @-ms-keyframes out {
-        0% {
-            transform: translateY(0px) rotate(0deg); 
-        }
-        60% {
-            transform: rotate(60deg); 
-        }
-        100% {
-            transform: translateY(800px) rotate(10deg); 
-        } 
-    }
-    @-o-keyframes out {
-        0% {
-            transform: translateY(0px) rotate(0deg); 
-        }
-        60% {
-            transform: rotate(60deg); 
-        }
-        100% {
-            transform: translateY(800px) rotate(10deg); 
-        } 
-    }
     @keyframes in {
         0% {
             opacity: 0;
@@ -219,50 +161,6 @@ contact form css
         100% {
             opacity: 1;
             transform: rotateX(0deg); 
-        } 
-    }
-    @-moz-keyframes out {
-        0% {
-            transform: translateY(0px) rotate(0deg); 
-        }
-        60% {
-            transform: rotate(60deg); 
-        }
-        100% {
-            transform: translateY(800px) rotate(10deg); 
-        } 
-    }
-    @-webkit-keyframes out {
-        0% {
-            transform: translateY(0px) rotate(0deg); 
-        }
-        60% {
-            transform: rotate(60deg); 
-        }
-        100% {
-            transform: translateY(800px) rotate(10deg); 
-        } 
-    }
-    @-ms-keyframes out {
-        0% {
-            transform: translateY(0px) rotate(0deg); 
-        }
-        60% {
-            transform: rotate(60deg); 
-        }
-        100% {
-            transform: translateY(800px) rotate(10deg); 
-        } 
-    }
-    @-o-keyframes out {
-        0% {
-            transform: translateY(0px) rotate(0deg); 
-        }
-        60% {
-            transform: rotate(60deg); 
-        }
-        100% {
-            transform: translateY(800px) rotate(10deg); 
         } 
     }
 }
