--- a/src/styles/layout/_fish-bowl.scss
+++ b/src/styles/layout/_fish-bowl.scss
@@ -1,6 +1,3 @@
-/********************************************
-style intro page css
-*********************************************/
 .slide {
     .main-page-container {
       position: absolute;
@@ -10,7 +7,7 @@ style intro page css
     .title {
         top: 30%;
         text-align: center;
-        font-family: 'Fredoka One', 'Arial Rounded MT Bold', 'Segoe UI';
+        font-family: $font-stack-secondary;
         color: rgb(243, 243, 243);
         font-weight: normal;
         h2 {
@@ -18,11 +15,16 @@ style intro page css
         }
         h2:nth-child(1) {
             margin-bottom: 0;
+            animation: slide-in-right 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 0.8s;
         }
         span {
             padding-left: 6px;
             font-size: 1.55em;
-            color: rgb(88, 162, 197);
+            color: $dark-blue;
+            animation: slide-in-left 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 1.3s;
+        }
+        h2:nth-child(3) {
+            animation: slide-in-left 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 1.7s;
         }
     }
     .main-button {
@@ -35,11 +37,12 @@ style intro page css
         color: white;
         background: transparent;
         cursor: pointer;
+        animation: slide-in-vertical 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 2.4s;
         p {
             display: inline-block;
             margin: 0;
             padding: 0;
-            font-family: 'Fredoka One', 'Arial Rounded MT Bold', 'Segoe UI';
+            font-family: $font-stack-secondary;
             color: rgb(243, 243, 243);
         }
         p:nth-child(1) {
@@ -60,53 +63,7 @@ style intro page css
         }
     }
 }
-/********************************************
-main orientation css
-*********************************************/
-.slide {
-    overflow: hidden;
-}
-.belt {
-    width: 200%;
-    display: flex;
-    transition: transform 600ms cubic-bezier(0, 1.1, 0.79,-0.62);
-    perspective: 1000px;
-}
-.state {
-    width: 50%;
-    height: 100vh;
-}
-.state-1 {
-    transition: transform 1s ease-in-out;
-    transform-origin: center right;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-color: #111c2d;
-}
-.state-2 {
-    background-color: rgb(243, 243, 243);
-    // box-shadow: 0 0 0 black;
-    z-index: 2;
-    transition: all 600ms ease-in-out;
-    overflow-y: scroll;
-}
-.slide.is-transitioned {
-    .belt {
-        transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-        -webkit-transform: translateX(-50%);
-    }
-    .state-1 {
-        transform: scale(1) rotateY(-90deg);
-        -ms-transform: scale(1) rotateY(-90deg);
-        -webkit-transform: scale(1) rotateY(-90deg);
-    }
-}
-/********************************************
-fish bowl css
-*********************************************/
+
 #scene {
     width: 100% !important;
     height: 100% !important;
