--- a/src/styles/layout/_portfolio.scss
+++ b/src/styles/layout/_portfolio.scss
@@ -1,7 +1,4 @@
 /********************************************
-portfolio css
-*********************************************/
-/********************************************
 sorting image css
 *********************************************/
 .sort-image-container {
@@ -23,7 +20,7 @@ sorting image css
             -moz-border-radius: 4px;
             cursor: pointer;
             color: rgb(24, 24, 24);
-            font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+            font-family: $font-stack-primary;
             transition: transform 80ms cubic-bezier(0, 1.69, 0.76, 1.74);
             &:hover {
                 transform: scale(1.03);
@@ -41,56 +38,6 @@ sorting image css
             animation-duration: 300ms;
             animation-timing-function: ease-in-out;
             animation-fill-mode: forwards;
-        }
-        @keyframes open {
-            0% {
-                opacity: 0;
-                transform: rotateX(-90deg);
-            }
-            100% {
-                opacity: 1;
-                transform: rotateX(0deg);
-            }
-        }
-        @-moz-keyframes open {
-            0% {
-                opacity: 0;
-                transform: rotateX(-90deg);
-            }
-            100% {
-                opacity: 1;
-                transform: rotateX(0deg);
-            }
-        }
-        @-webkit-keyframes open {
-            0% {
-                opacity: 0;
-                transform: rotateX(-90deg);
-            }
-            100% {
-                opacity: 1;
-                transform: rotateX(0deg);
-            }
-        }
-        @-ms-keyframes open {
-            0% {
-                opacity: 0;
-                transform: rotateX(-90deg);
-            }
-            100% {
-                opacity: 1;
-                transform: rotateX(0deg);
-            }
-        }
-        @-o-keyframes open {
-            0% {
-                opacity: 0;
-                transform: rotateX(-90deg);
-            }
-            100% {
-                opacity: 1;
-                transform: rotateX(0deg);
-            }
         }
         .sort-content {
             background-color: white;
@@ -121,13 +68,13 @@ sorting image css
 
 .sort-selected {
     color: white !important;
-    background-color: rgb(88, 162, 197) !important;
+    background-color: $dark-blue !important;
     transition: transform 100ms cubic-bezier(0, 1.69, 0.76, 1.74);
     &:hover {
         transform: scale(1.03);
         -ms-transform: scale(1.03);
         -webkit-transform: scale(1.03);
-        background-color: rgb(88, 162, 197);
+        background-color: $dark-blue;
     }
 }
 
@@ -187,7 +134,7 @@ browser window image css
     }
     /* Style the input field */
     .browser-input {
-        font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+        font-family: $font-stack-primary;
         width: 100%;
         border-radius: 3px;
         -webkit-border-radius: 3px;
@@ -274,56 +221,6 @@ image layout css
         animation-timing-function: cubic-bezier(0, 1.69, 0.76, 0.5);
         animation-fill-mode: forwards;
     }
-    @keyframes top-slide-in {
-        0% {
-            background-color: rgba(114, 114, 114, 0);
-        }
-        100% {
-            background-color: rgba(114, 114, 114, 0.65);
-            bottom: 0;
-            height: 100%;
-        }
-    }
-    @-moz-keyframes top-slide-in {
-        0% {
-            background-color: rgba(114, 114, 114, 0);
-        }
-        100% {
-            background-color: rgba(114, 114, 114, 0.65);
-            bottom: 0;
-            height: 100%;
-        }
-    }
-    @-webkit-keyframes top-slide-in {
-        0% {
-            background-color: rgba(114, 114, 114, 0);
-        }
-        100% {
-            background-color: rgba(114, 114, 114, 0.65);
-            bottom: 0;
-            height: 100%;
-        }
-    }
-    @-ms-keyframes top-slide-in {
-        0% {
-            background-color: rgba(114, 114, 114, 0);
-        }
-        100% {
-            background-color: rgba(114, 114, 114, 0.65);
-            bottom: 0;
-            height: 100%;
-        }
-    }
-    @-o-keyframes top-slide-in {
-        0% {
-            background-color: rgba(114, 114, 114, 0);
-        }
-        100% {
-            background-color: rgba(114, 114, 114, 0.65);
-            bottom: 0;
-            height: 100%;
-        }
-    }
     .text-container {
         white-space: nowrap; 
         color: white;
@@ -337,16 +234,16 @@ image layout css
         -ms-transform: translate(-50%, -50%);
         -webkit-transform: translate(-50%, -50%);
         p {
-            color: rgb(88, 162, 197);
+            color: $dark-blue;
         }
         p:nth-child(1) {
-            font-family: 'Fredoka One', 'Arial Rounded MT Bold', 'Segoe UI';
+            font-family: $font-stack-primary;
             color: rgb(24, 24, 24);
             font-size: 1.15em;
             margin: 0;
         }
         p:nth-child(2) {
-            font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+            font-family: $font-stack-secondary;
             margin-top: 0;
         }
         .more-button {
@@ -355,7 +252,7 @@ image layout css
             height: 50px;
             line-height: 50px;
             text-align: center;
-            border: 2px solid rgb(88, 162, 197);
+            border: 2px solid $dark-blue;
             background: transparent;
             cursor: pointer;
             transition: transform 100ms cubic-bezier(0, 1.69, 0.76, 1.74);
@@ -363,7 +260,7 @@ image layout css
                 text-decoration: none;
                 color: rgb(24, 24, 24);
                 p {
-                    font-family: 'Cabin', 'Trebuchet MS', 'Tahoma';
+                    font-family: $font-stack-primary;
                     display: inline-block;
                     font-weight: bold;
                     padding-left: 5px;
@@ -374,7 +271,7 @@ image layout css
                 transform: scale(1.05);
                 -ms-transform: scale(1.05);
                 -webkit-transform: scale(1.05);
-                background-color: rgb(88, 162, 197);
+                background-color: $dark-blue;
                 a, p {
                     color: white;
                 }
