--- a/src/styles/partials/_nav.scss
+++ b/src/styles/partials/_nav.scss
@@ -1,11 +1,3 @@
-/********************************************
-header nav css
-*********************************************/
-// .main-container {
-//     max-width: 1100px;
-//     width: 90%;
-//     margin: 0 auto;
-// }
 nav {
     position: fixed;
     width: 50%;
@@ -19,29 +11,29 @@ nav {
         padding: 0;
     }
     a {
-        font-family: 'Fredoka One', 'Arial Rounded MT Bold', 'Segoe UI';
+        font-family: $font-stack-secondary;
         text-decoration: none;
         font-size: 16px;
         color: rgb(243, 243, 243);
         &:hover {
             cursor: pointer;
-            color: rgb(88, 162, 197);
+            color: $dark-blue;
         }
         &:active {
             background-color: rgb(52, 53, 56);
         }
     }
     .login-text {
-        font-family: 'Fredoka One', 'Arial Rounded MT Bold', 'Segoe UI';
+        font-family: $font-stack-secondary;
         color: rgb(243, 243, 243);
     }
     .login-text:hover {
-        color: rgb(88, 162, 197);
+        color: $dark-blue;
     }
 }
   
 .selected {
-    color: rgb(88, 162, 197);
+    color: $dark-blue;
 }
   
 @media (min-width: 851px) {
@@ -53,7 +45,7 @@ nav {
         }
         .main-list-container {
             background-color: rgb(40, 42, 49);
-            border-bottom: 3px solid rgb(60, 177, 197);
+            border-bottom: 3px solid $dark-blue;
             //padding: 0 5%;
         }
         .nav-container {
@@ -111,56 +103,6 @@ nav {
                 animation-duration: 200ms;
                 animation-timing-function: ease-in-out;
                 animation-fill-mode: forwards;
-                @keyframes menu1 {
-                    0% {
-                        opacity: 0;
-                        transform: rotateY(-90deg) translateY(30px);
-                    }
-                    100% {
-                        opacity: 1;
-                        transform: rotateY(0deg) translateY(0px);
-                    }
-                }
-                @-moz-keyframes menu1 {
-                    0% {
-                        opacity: 0;
-                        transform: rotateY(-90deg) translateY(30px);
-                    }
-                    100% {
-                        opacity: 1;
-                        transform: rotateY(0deg) translateY(0px);
-                    }
-                }
-                @-webkit-keyframes menu1 {
-                    0% {
-                        opacity: 0;
-                        transform: rotateY(-90deg) translateY(30px);
-                    }
-                    100% {
-                        opacity: 1;
-                        transform: rotateY(0deg) translateY(0px);
-                    }
-                }
-                @-ms-keyframes menu1 {
-                    0% {
-                        opacity: 0;
-                        transform: rotateY(-90deg) translateY(30px);
-                    }
-                    100% {
-                        opacity: 1;
-                        transform: rotateY(0deg) translateY(0px);
-                    }
-                }
-                @-o-keyframes menu1 {
-                    0% {
-                        opacity: 0;
-                        transform: rotateY(-90deg) translateY(30px);
-                    }
-                    100% {
-                        opacity: 1;
-                        transform: rotateY(0deg) translateY(0px);
-                    }
-                }
             }
         }
     }
@@ -178,13 +120,13 @@ nav {
     nav {
         .list-icon-container {
             background-color: rgb(40, 42, 49);
-            border-bottom: 3px solid rgb(60, 177, 197);
+            border-bottom: 3px solid $dark-blue;
         } 
         li {
             background-color: rgb(58, 59, 63);
         }
         .social-list {
-            border-bottom: 2px solid rgb(60, 177, 197);
+            border-bottom: 2px solid $dark-blue;
             .login-text {
                 display: block;
                 padding: 10px 5%;
@@ -212,7 +154,7 @@ nav {
             line-height: 45px;
             display:inline-block;
             float: left;
-            font-family: 'Fredoka One', 'Arial Rounded MT Bold', 'Segoe UI';
+            font-family: $font-stack-secondary;
             color: rgb(243, 243, 243);
             font-weight: normal;
         }
