--- a/src/styles/base/_variable.scss
+++ b/src/styles/base/_variable.scss
@@ -1,7 +1,7 @@
 // Font Stacks
 
 $font-stack-primary: 'Cabin', 'Trebuchet MS', 'Tahoma';
-$font-stack-secondary: 'Fredoka One', 'Arial Rounded MT Bold', 'Segoe UI';
+$font-stack-secondary: "Arial Rounded MT Bold", "Segoe UI";
 
 // Colors
 
