--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -13,13 +13,16 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>
         <script src="https://rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
     </head>
+    
     <body>
         {{{body}}}
     </body>
+
     <script type="text/javascript" src="/bundle.js"></script>
-    <script type="text/javascript" src="/javascripts/scroll-animation.js"></script>
+    <script type="text/javascript" src="/javascripts/main.min.js"></script>
+    {{!-- <script type="text/javascript" src="/javascripts/scroll-animation.js"></script>
     <script type="text/javascript" src="/javascripts/three-orbit-controls.js"></script>
-    <script type="text/javascript" src="/javascripts/index.js"></script>
+    <script type="text/javascript" src="/javascripts/index.js"></script> --}}
 </html>
 
 
