--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -8,6 +8,7 @@ footer {
         left: 0;
         right: 0;
         text-align: center;
+        animation: slide-in-vertical 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 0.4s;
         cursor: pointer;
         a {
             text-decoration: none;
@@ -34,23 +35,28 @@ footer {
     .fa-envelope {
         background: white;
         color: rgb(34, 106, 240);
-    }
-    .fa-facebook {
-        background: #3B5998;
-        color: white;
-    }
-    .fa-linkedin {
-        background: #007bb5;
-        color: white;
+        animation: slide-in-vertical 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 0.5s;
     }
     .fa-github {
         background: rgb(51, 53, 59);
         color: white;
+        animation: slide-in-vertical 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 0.6s;
+    }
+    .fa-facebook {
+        background: #3B5998;
+        color: white;
+        animation: slide-in-vertical 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 0.7s;
+    }
+    .fa-linkedin {
+        background: #007bb5;
+        color: white;
+        animation: slide-in-vertical 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 0.8s;
     }
     p {
         text-align: center;
         font-family: $font-stack-primary;
         color: rgb(240, 240, 240);
+        animation: slide-in-vertical 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both 0.9s;
     }
     .fa:hover {
         animation: shake 0.5s; 
