Added google analytics.

--- a/views/portfolio/main.hbs
+++ b/views/portfolio/main.hbs
@@ -135,3 +135,12 @@
     </div> <!-- end slide -->
 </div> <!-- end screen -->
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111597887-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-111597887-1');
+</script>
+
