--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -13,6 +13,16 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>
         <script src="https://rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
     </head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <input id="googleAnalytic" type="hidden" value="{{googleTrackingID}}" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{googleTrackingID}}"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', document.getElementById('googleAnalytic').value);
+    </script>
     
     <body>
         {{{body}}}
