Added email template.

--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -1,5 +1,5 @@
 // ==========================================================================
-// Component Imports
+// Components Imports
 // ==========================================================================
 
 @import 'orientation';
