--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -14,7 +14,7 @@
         <script src="https://rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
     </head>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    {{!-- Global site tag (gtag.js) - Google Analytics --}}
     <input id="googleAnalytic" type="hidden" value="{{googleTrackingID}}" />
     <script async src="https://www.googletagmanager.com/gtag/js?id={{googleTrackingID}}"></script>
     <script>
