--- a/src/styles/partials/_index.scss
+++ b/src/styles/partials/_index.scss
@@ -1,5 +1,5 @@
 // ==========================================================================
-// Layout Imports
+// Partials Imports
 // ==========================================================================
 
 @import 'loader';
