--- a/src/styles/partials/_nav.scss
+++ b/src/styles/partials/_nav.scss
@@ -115,7 +115,7 @@ nav {
         margin: 0 auto;
         position: relative;
         padding-top: 5px;
-        overflow: auto;
+        height: 50px;
     }
     nav {
         .list-icon-container {
