--- a/views/portfolio/main.hbs
+++ b/views/portfolio/main.hbs
@@ -42,13 +42,13 @@
                                     <li><a class="nav-main-text" href="#portfolio">PORTFOLIO</a></li>
                                     <li><a class="nav-main-text" href="#contact">CONTACT</a></li>
                                 </ul>
-                                <ul class="social-list">
+                                {{!-- <ul class="social-list">
                                     <li class="login-text">SOCIAL LOGIN
                                         <ul class="dropdown-menu menu-2">
                                             <li class="dropdown-menu-disable"><a href="#">Facebook Login</a></li>
                                         </ul>
                                     </li>
-                                </ul>
+                                </ul> --}}
                             </div>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                             <a href="https://facebook.com/lue.hang"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.linkedin.com/in/lue-hang-8ba684153"><i class="fa fa-linkedin"></i></a>
                         </div>
-                        <p>LUE HANG&copy;2017</p>
+                        <p>LUE HANG&copy;2018</p>
                     </div>
                 </footer> <!-- end footer -->
             </div> <!-- end state-2 -->
