--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -5,7 +5,6 @@
         <title>{{title}}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        {{!-- <link rel='stylesheet' href='/stylesheets/style.css'/> --}}
         <link rel='stylesheet' href='/stylesheets/style.min.css'/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,8 +14,8 @@
     </head>
 
     {{!-- Global site tag (gtag.js) - Google Analytics --}}
-    <input id="googleAnalytic" type="hidden" value="{{googleTrackingID}}" />
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{googleTrackingID}}"></script>
+    <input id="googleAnalytic" type="hidden" value="{{ GOOGLE_TRACKING_ID }}" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ GOOGLE_TRACKING_ID }}"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -30,9 +29,6 @@
 
     <script type="text/javascript" src="/bundle.js"></script>
     <script type="text/javascript" src="/javascripts/main.min.js"></script>
-    {{!-- <script type="text/javascript" src="/javascripts/scroll-animation.js"></script>
-    <script type="text/javascript" src="/javascripts/three-orbit-controls.js"></script>
-    <script type="text/javascript" src="/javascripts/index.js"></script> --}}
 </html>
 
 
