Converted to React.

--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -2,6 +2,7 @@
 // Global Imports
 // ==========================================================================
 
+@import 'primary/materialize';
 @import 'base/index';
 @import 'partials/index';
 @import 'layout/index';
