--- a/src/styles/base/_index.scss
+++ b/src/styles/base/_index.scss
@@ -2,7 +2,7 @@
 // Base Imports
 // ==========================================================================
 
-@import 'normalize';
+// @import 'normalize';
 @import 'variable';
 @import 'animations';
 @import 'animations-support';
