--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -5,8 +5,9 @@
         <title>{{title}}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel='stylesheet' href='/stylesheets/style.min.css'/>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700"/>
+        <link rel='stylesheet' href='/stylesheets/index.min.css'/>
+        {{!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700"/> --}}
+        {{!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> --}}
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>
@@ -24,11 +25,12 @@
     </script>
     
     <body>
+        {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script> --}}
         {{{body}}}
     </body>
 
     <script type="text/javascript" src="/bundle.js"></script>
-    <script type="text/javascript" src="/javascripts/main.min.js"></script>
+    {{!-- <script type="text/javascript" src="/javascripts/main.min.js"></script> --}}
 </html>
 
 
